# robot_guidance_and_localisation

./: README.md
RNN_DP_Individual_project/: README.md  inspect_records.py  main.py  trainer.py
RNN_DP_Individual_project/data/: dataset.py  generate_records.py  inspect_records.py
RNN_DP_Individual_project/data/endoscopy/: check_pairs.py  intrinsics.txt
RNN_DP_Individual_project/data/endoscopy/150-1150depth_corrected_ccx_ccy/: frame_0000.txt  frame_0010.txt  frame_0020.txt  frame_0030.txt  frame_0040.txt  frame_0050.txt  frame_0060.txt  frame_0070.txt  frame_0080.txt  frame_0090.txt  frame_0100.txt  frame_0110.txt  frame_0120.txt  frame_0130.txt  frame_0140.txt  frame_0150.txt  frame_0160.txt  frame_0170.txt  frame_0180.txt  frame_0190.txt  frame_0200.txt  frame_0210.txt  frame_0220.txt  (+18 more)
RNN_DP_Individual_project/model/: model.py
notebooks/: Colmap.ipynb  OpenSfM.ipynb  SfM  individual_project_depth_maps.ipynb
reg3d2d/: CMakeLists.txt
reg3d2d/src/: CMakeLists.txt  D95325.pose  D95325_orig.pose  D97193.pose  D97193_2.pose  D97193_363.pose  D97193_363_up.pose  D97193_899.pose  D97193_899_2.pose  D97193_899_r.pose  brent.c  brent.h  define_test.h  deformation.cpp  deformation.h  glm.cpp  glm.h  global.h  linmin.c  linmin.h  main.cpp  main.h  mineitk.h  mnbrak.c  mnbrak.h  mylist.h  nrutil.c  nrutil.h  numrec.h  ogl.cpp  ogl.h  powell.c  powell.h  praxis.c  praxis.h  projection.cpp  projection.h  reg2d3d_wrap.cpp  reg2d3d_wrap0.cpp  registration.fl  (+13 more)
reg3d2d/src/poses/: new.pose  new1.pose  new2.pose  test0_1.pose  test0_120.pose  test0_40.pose  test0_80.pose
(+46 files in other folders)
